fix vm args